--- a/README
+++ b/README
@@ -1,2 +1,6 @@
+I created a simple, responsive, touch-friendly navigation from a mobile first approach.
+
 Edit the index.html file to your liking
-The styles.css file contains all the code you need to edit the colors and the way the tabs are shaped
+The styles.css file contains all the code you need to edit the colors and the way the tabs are shaped.
+
+
